Started changing things to get ready for map creator, Map now has width and height instead of solely MAP_SIZE , added some more documenting to the code